added gpredict plugin

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ OPENC3_TAG=6.5.0
 # Comment this variable to disable local mode (don't set it to 0)
 OPENC3_LOCAL_MODE=1
 # Comment this variable to disable installing the Demo (don't set it to 0)
-OPENC3_DEMO=1
+# OPENC3_DEMO=1
 # Docker repo settings on where to get COSMOS containers
 OPENC3_REGISTRY=docker.io
 OPENC3_NAMESPACE=openc3inc
