--- a/compose.yaml
+++ b/compose.yaml
@@ -156,8 +156,8 @@ services:
     user: "${OPENC3_USER_ID:-1001}:${OPENC3_GROUP_ID:-1001}"
     image: "${OPENC3_REGISTRY}/${OPENC3_NAMESPACE}/openc3-operator${OPENC3_IMAGE_SUFFIX}:${OPENC3_TAG}"
     restart: "unless-stopped"
-    # ports:
-    #   - "127.0.0.1:7779:7779" # Open port for the demo router
+    ports:
+      - "127.0.0.1:5000:5000" # Open port for the demo router
     #   - "127.0.0.1:8081:8081/udp" # Open a udp port
     depends_on:
       - "openc3-redis"
